feat: Añadir gestión y encriptación de certificados digitales en la administración de SinergiaCRM

--- a/.gitignore
+++ b/.gitignore
@@ -135,3 +135,8 @@ sdaRebuildError.txt
 
 # Ignore TEST folder
 /TEST
+
+# Ignore custom certificates
+custom/certificates/.htaccess
+custom/certificates/cert_encrypted.bin
+custom/certificates/cert_metadata.json
