Improvement - General - Incluir ficheros internos en gitIgnore #849

--- a/.gitignore
+++ b/.gitignore
@@ -135,3 +135,9 @@ sdaRebuildError.txt
 
 # Ignore TEST folder
 /TEST
+
+# Ignore STIC internal files
+SticRepair.php
+
+# Do not ignore cache vendor library
+!vendor/psr/cache/
