new configuration crowdin

--- a/crowdin.yml
+++ b/crowdin.yml
@@ -7,3 +7,5 @@ files:
     translation: /%original_path%/%locale_with_underscore%.KReporterCore.php
   - source: '*es_ES.MailMergeReports.php*'
     translation: /%original_path%/%locale_with_underscore%.MailMergeReports.php
+  - source: '*Dashlet.es_ES.lang.php*'
+    translation: /%original_path%/%original_file_name%.%locale_with_underscore%.lang.php
